2008-07-24  Aleksandar Ristovski  <aristovski@qnx.com>

	* nto-procfs.c (procfs_attach): Populate initial thread list.
	(procfs_wait): Return new pid, built from the inferior status.

2008-07-23  Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* configure.ac (CONFIG_INITS): Delete long obsoleted variable.
	* configure: Regenerate.

2008-07-23  Aleksandar Ristovski  <aristovski@qnx.com>

	* nto-procfs.c (procfs_xfer_memory): Changed signature.
	(procfs_resume): Workaround for dereferencing type-punned pointer
	warning.
	* nto-tdep.c (nto_parse_redirection): Change signature to be const 
	correct.
	* nto-tdep.h (nto_parse_redirection): Likewise.

2008-07-21  Stan Shebs  <stan@codesourcery.com>

	Scrub remnants of IN_SOLIB_DYNSYM_RESOLVE_CODE.
	* gdbarch.sh: Adjust comment to refer to
	in_solib_dynsym_resolve_code().
	* gdbarch.h, gdbarch.c: Update.
	* solib-osf.c: Ditto.
	* infrun.c: Ditto.
	(handle_inferior_event): Use in_solib_dynsym_resolve_code
	unconditionally.
	* config/mips/nm-irix5.h: Remove undef of
	IN_SOLIB_DYNSYM_RESOLVE_CODE.

2008-07-21  Tom Tromey  <tromey@redhat.com>

	* symfile.c (reread_symbols): Don't pass argument to observer.
	* exec.c (exec_file_attach): Don't pass argument to observer.
	* ada-lang.c (ada_executable_changed_observer): Remove argument.
	* symtab.c (symtab_observer_executable_changed): Remove argument.
	* observer.sh: Handle functions with no arguments.

2008-07-20  Sergei Poselenov  <sposelenov@emcraft.com>
            Chris Demetriou  <cgd@google.com>

	* elfread.c (elf_symfile_segments): Fix the check that each loadable
	section fits within an ELF segment to handle ELF segments that hit
	the end of the address space.

2008-07-20  Chris Demetriou  <cgd@google.com>

	* MAINTAINERS (Write After Approval): Add self.

2008-07-18  Tom Tromey  <tromey@redhat.com>

	PR gdb/855:
	* NEWS: Add entry for macro commands.
	* Makefile.in (macrocmd.o): Add gdb_string.h.
	* macroscope.h (user_macro_scope): Declare.